keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-base_quoted.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
#base "some/base.vdf"

"Key"
{
}
