keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-base_unquoted.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
#base "../some_file.pop"

"Key"
{
}
