keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-basic.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
"Outer Key"
{
	"Seq Key"	"Str Val"
	"Seq Key"
	{
	}
}
