keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-compact.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
"foo"
{
	""
	{
	}
	"bar"	"baz"
}
