keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-raw_strings.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
"Some\text\here"
{
	"more\text\here"	"and\here"
}
