keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-special_characters.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
"Outer Key"
{
	"Escaped Characters"	"\n\r\t\"\\"
	"Mixed"	"\n\t\n\t\n\t\\\""
	"Raw Newline"	"\n"
	"Raw Tab"	"\t"
}
