keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-unquoted_strings.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
"OuterKey"
{
	"SequenceKey"	"SequenceVal"
	"SequenceKey"
	{
	}
}
